--- a/app/assets/stylesheets/field_notes.css.scss
+++ b/app/assets/stylesheets/field_notes.css.scss
@@ -102,6 +102,7 @@ nav.top-bar {
     color: $turq;
     li {
       list-style-position: inside;
+      list-style-type: none;
       color: $turq ;
       width: 100%;
       margin-bottom: 0.7rem;
