post redirects should be working now

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -24,7 +24,7 @@
     line-height: 1.4rem;
     color: #222;
     font-weight: 300;
-    margin-bottom: 0.8rem;
+    margin: 2rem 0 0.8rem 0;
   }
   .front_icon {
     img {
