--- a/app/views/layouts/activities.html.haml
+++ b/app/views/layouts/activities.html.haml
@@ -150,4 +150,8 @@
           }
         //$('#sticky_blue_box').dialog({draggable: false, resizable: false, position: { my: "right-40 bottom", at: "right bottom-40", of: $('.hor-container')}})
         $('.ui-dialog').css('top', 220);
+        $('footer .drawer').click(function() {
+          $('footer .rest').slideToggle();
+          
+        });
       });
