--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -182,12 +182,16 @@ header {
 
 footer {
   font-size: 0.9rem;
+  img {
+    padding: 0px 15px;
+  }
   .row {
     max-width: initial;
   }
   .drawer {
     background-color: #fad1cb;
     padding: 1.5rem 0;
+    cursor: pointer;
     margin-bottom: -2px;
     a {
       color: #222;
@@ -202,6 +206,7 @@ footer {
     .columns {
       padding: 1.6rem 0;
       border-bottom: 1px solid #000;
+
     }
   }
   
