--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -105,7 +105,11 @@
         %td.activity_entry
           .arrow_left{style: "background: url(#{image_path('arrows/' + activity.box_colour + '.png')}) center center no-repeat"}
           .activity_box{style: "background-color: ##{activity.box_colour};", class: activity.box_colour}
-            .title.text-center= activity.name
+            .title.text-center
+              - if activity.subsite
+                = link_to activity.name, "http://" + activity.subsite.hostname
+              - else
+                = activity.name
             .dates.text-center
               - if activity.is_whole_year?
                 whole year activity
