--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -27,9 +27,17 @@
         = image_tag('cw.png')
         = image_tag('op.png')
         = image_tag('austrian.jpg')
+        = image_tag('artsiceland.png')
   .row.contact_info
     .row
       .small-12.columns.text-center
         Contact
         %br/
-        Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@hybridmatters.net      
+        Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@hybridmatters.net
+        
+= content_for :jquery do
+  :plain
+    $('footer .drawer').click(function() {
+      $('footer .rest').slideToggle();
+      
+    });
