--- a/app/views/layouts/activities.html.haml
+++ b/app/views/layouts/activities.html.haml
@@ -86,12 +86,19 @@
             .row
               .menu_wrapper
                 %ul.top-bar-menu
-                  - Activitytype.order_by(:sort_order.asc).each do |at|
-                    - if at.activities.map(&:subsite).compact.empty?
-                      %li= at.name
-                    - else
-                      -  at.activities.delete_if{|x| x.subsite.nil?}.compact.each do |a|
-                        %li= link_to a.name, "http://" + a.subsite.subdomains.split(',').compact.first.strip.downcase + ".hybridmatters.net"
+                  - Activity.secondary_menu.each do |a|
+                    %li
+                      - if a.subsite
+                        = link_to (a.secondary_menu_name.blank? ? a.name : a.secondary_menu_name), "http://#{a.subsite.hostname}"
+                      - else
+                        = a.secondary_menu_name.blank? ? a.name : a.secondary_menu_name
+                    
+                  / - Activitytype.order_by(:sort_order.asc).each do |at|
+                  /   - if at.activities.map(&:subsite).compact.empty?
+                  /     %li= at.name
+                  /   - else
+                  /     -  at.activities.delete_if{|x| x.subsite.nil?}.compact.each do |a|
+                  /       %li= link_to a.name, "http://" + a.subsite.subdomains.split(',').compact.first.strip.downcase + ".hybridmatters.net"
             
                 
                 
