--- a/app/assets/stylesheets/activities.css.scss
+++ b/app/assets/stylesheets/activities.css.scss
@@ -28,6 +28,7 @@ nav.activities-bar {
          position: relative;
          padding: 1.3rem 1.4rem 0 1.4rem;
          width: 1%;
+         text-align: center;
          &.active {
            background-color: none;
            text: $darkerturq;
