--- a/app/assets/stylesheets/activities.css.scss
+++ b/app/assets/stylesheets/activities.css.scss
@@ -13,6 +13,8 @@ nav.activities-bar {
    z-index: 99;
    position: absolute;
    border-right: none;
+   width: 100%;
+   
    .menu_wrapper {
      display: table;
      width: 100%;
