--- a/app/views/layouts/field_notes.html.haml
+++ b/app/views/layouts/field_notes.html.haml
@@ -63,7 +63,12 @@
                 = link_to image_tag('icon_post.png', onmouseover: "this.src='#{image_path('icon_post_hover.png')}'", onmouseout: "this.src='#{image_path('icon_post.png')}'"), 'mailto:info@bioartsociety.fi', class: :maillink
               .rest
                 %ul.top-bar-menu
-                  %li= link_to 'Home', 'http://hybridmatters.net/'
+                  %li
+                    %select.main_nav_select
+                      %option{value: 'www'} Main site
+                      %option{value: 'fieldnotes', selected: :selected} Field_Notes
+                      %option{value: 'invitations'} Invitations
+                  -#%li= link_to 'Home', 'http://hybridmatters.net/'
                   %li{class: controller.controller_name == 'pages' ? :active : false}= link_to 'About', page_path('about-field-notes-hybrid-matters')
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                   %li{class: controller.controller_name == 'groups' ? :active : false}= link_to 'Groups', groups_path
@@ -73,8 +78,10 @@
               .social &nbsp;
               .rest
                 %ul.top-bar-menu
-                  %li
-                    %span Home
+                  %li.select_spacer 
+                    %span
+                      %strong Field_Notes
+                  
                   %li{class: controller.controller_name == 'pages' ? :active : false}
                     %span About
                   %li{class: controller.controller_name == 'posts' ? :active : false}
@@ -122,4 +129,8 @@
     = render partial: 'layouts/footer'
                      
     :javascript
-      $(document).ready(function() { #{yield :jquery} });
+      $(document).ready(function() { #{yield :jquery} 
+        $('select.main_nav_select').change(function() {
+          window.location.href= 'http://' + $(this).val() + '.hybridmatters.net';      
+        });
+      });
