hidden slect uniform width

--- a/app/views/layouts/activities.html.haml
+++ b/app/views/layouts/activities.html.haml
@@ -79,7 +79,7 @@
                 %ul.top-bar-menu
                   %li.select_spacer 
                     %span
-                      %strong Main Site
+                      %strong Field Notes
 
                   %li{class: controller.controller_name == 'pages' && params[:id] == 'about' ? :active : false}
                     %span About
