--- a/app/views/layouts/invitations.html.haml
+++ b/app/views/layouts/invitations.html.haml
@@ -80,7 +80,7 @@
                 %ul.top-bar-menu
                   %li.select_spacer 
                     %span
-                      %strong Invitations
+                      %strong Field_Notes
                   %li{class: controller.controller_name == 'pages' ? :active : false}
                     %span About
                   %li{class: controller.controller_name == 'posts' ? :active : false}
