--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -26,6 +26,12 @@
     font-weight: 300;
     margin: 2rem 0 0.8rem 0;
   }
+  .body p {
+    height: 0; overflow: hidden; max-width: 100%;
+    iframe {
+      position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+    }
+  }
   .front_icon {
     img {
       border: 2px solid black;
