--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -19,15 +19,18 @@
   
 .post {
   padding: 3.75rem 0;
+  .body {
+    margin: 2rem 0 0.8rem 0;
+  }
   .body, .body p {
     font-size: 0.9rem;
     line-height: 1.4rem;
     color: #222;
     font-weight: 300;
-    margin: 2rem 0 0.8rem 0;
+
   }
   .body p {
-    height: 0; overflow: hidden; max-width: 100%;
+    height: 0; max-width: 100%;
     iframe {
       position: absolute; top: 0; left: 0; width: 100%; height: 100%;
     }
