--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,6 +2,8 @@
 
 .post_container {
   margin: 0;
+  height: auto;
+  padding-bottom: 5rem;
   
   .blue_category_bar {
     background-color: $turq;
