--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -32,7 +32,7 @@
 
   }
   .body p {
-    height: 0; max-width: 100%;
+    max-width: 100%;
     iframe {
       position: absolute; top: 0; left: 0; width: 100%; height: 100%;
     }
